exports[`actions > modifications > copyFromScenario should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "url": "/api/scenario/1/modifications",
  },
  "type": "fetch",
}
`;

exports[`actions > modifications > copyFromScenario should work 2`] = `
Array [
  Object {
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > copyFromScenario should work 3`] = `
Array [
  Object {
    "type": "decrement outstanding fetches",
  },
  Array [
    Array [
      Object {
        "payload": Object {
          "bidirectional": false,
          "entries": Array [],
          "feed": "1",
          "name": "Test Modification",
          "routes": Array [
            "route1",
          ],
          "scenario": 2,
          "segments": Array [],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "dwellTime": 10,
              "endTime": 57600,
              "friday": true,
              "headwaySecs": 900,
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "variants": Array [
            0,
          ],
        },
        "type": "set modification",
      },
      Array [
        Object {
          "type": "increment outstanding fetches",
        },
        Promise {},
      ],
    ],
  ],
]
`;

exports[`actions > modifications > create should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "expanded": false,
        "id": 1,
        "name": "Add Trip Pattern",
        "scenario": "1",
        "segments": Array [],
        "showOnMap": true,
        "timetables": Array [],
        "type": "add-trip-pattern",
        "variants": Array [],
      },
      "method": "post",
    },
    "url": "/api/modification",
  },
  "type": "fetch",
}
`;

exports[`actions > modifications > create should work 2`] = `
Array [
  Object {
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > create should work 3`] = `
Array [
  Object {
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Object {
        "bidirectional": false,
        "entries": Array [],
        "feed": "1",
        "id": "1234",
        "name": "Test Modification",
        "routes": Array [
          "route1",
        ],
        "segments": Array [],
        "showOnMap": false,
        "timetables": Array [
          Object {
            "dwellTime": 10,
            "endTime": 57600,
            "friday": true,
            "headwaySecs": 900,
            "monday": true,
            "name": "Test timetable",
            "patternTrips": Array [
              "abcd",
            ],
            "saturday": false,
            "segmentSpeeds": Array [],
            "sourceTrip": "abcd",
            "startTime": 28800,
            "sunday": false,
            "thursday": true,
            "tuesday": true,
            "wednesday": true,
          },
        ],
        "trips": Array [
          "abcd",
        ],
        "type": "add-trip-pattern",
        "variants": Array [
          0,
        ],
      },
      "type": "set modification",
    },
    Object {
      "payload": Object {
        "args": Array [
          "/projects/1/scenarios/1/modifications/1234",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > modifications > deleteModification should work 1`] = `
Array [
  Object {
    "payload": "1",
    "type": "delete modification",
  },
  Object {
    "payload": Object {
      "next": [Function],
      "options": Object {
        "method": "delete",
      },
      "url": "/api/modification/1",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > modifications > deleteModification should work 2`] = `
Array [
  Object {
    "payload": "1",
    "type": "delete modification",
  },
  Array [
    Object {
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
]
`;

exports[`actions > modifications > deleteModification should work 3`] = `
Array [
  Object {
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > getForScenario should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "url": "/api/scenario/1/modifications",
  },
  "type": "fetch",
}
`;

exports[`actions > modifications > getForScenario should work 2`] = `
Array [
  Object {
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > getForScenario should work 3`] = `
Array [
  Object {
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Array [
        Object {
          "bidirectional": false,
          "entries": Array [],
          "feed": "1",
          "id": "1234",
          "name": "Test Modification",
          "routes": Array [
            "route1",
          ],
          "segments": Array [],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "dwellTime": 10,
              "endTime": 57600,
              "friday": true,
              "headwaySecs": 900,
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "variants": Array [
            0,
          ],
        },
      ],
      "type": "set modifications",
    },
    Array [
      Object {
        "type": "increment outstanding fetches",
      },
      Promise {},
    ],
  ],
]
`;

exports[`actions > modifications > saveToServer should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "bidirectional": false,
        "entries": Array [],
        "feed": "1",
        "id": "1234",
        "name": "Test Modification",
        "routes": Array [
          "route1",
        ],
        "segments": Array [],
        "showOnMap": false,
        "timetables": Array [
          Object {
            "dwellTime": 10,
            "endTime": 57600,
            "friday": true,
            "headwaySecs": 900,
            "monday": true,
            "name": "Test timetable",
            "patternTrips": Array [
              "abcd",
            ],
            "saturday": false,
            "segmentSpeeds": Array [],
            "sourceTrip": "abcd",
            "startTime": 28800,
            "sunday": false,
            "thursday": true,
            "tuesday": true,
            "wednesday": true,
          },
        ],
        "trips": Array [
          "abcd",
        ],
        "type": "add-trip-pattern",
        "variants": Array [
          0,
        ],
      },
      "method": "put",
    },
    "url": "/api/modification/1234",
  },
  "type": "fetch",
}
`;

exports[`actions > modifications > saveToServer should work 2`] = `
Array [
  Object {
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > saveToServer should work 3`] = `
Array [
  Object {
    "type": "decrement outstanding fetches",
  },
]
`;

exports[`actions > modifications > set should work 1`] = `
Array [
  Object {
    "payload": Object {
      "bidirectional": false,
      "entries": Array [],
      "feed": "1",
      "id": "1234",
      "name": "Test Modification",
      "routes": Array [
        "route1",
      ],
      "segments": Array [],
      "showOnMap": false,
      "timetables": Array [
        Object {
          "dwellTime": 10,
          "endTime": 57600,
          "friday": true,
          "headwaySecs": 900,
          "monday": true,
          "name": "Test timetable",
          "patternTrips": Array [
            "abcd",
          ],
          "saturday": false,
          "segmentSpeeds": Array [],
          "sourceTrip": "abcd",
          "startTime": 28800,
          "sunday": false,
          "thursday": true,
          "tuesday": true,
          "wednesday": true,
        },
      ],
      "trips": Array [
        "abcd",
      ],
      "type": "add-trip-pattern",
      "variants": Array [
        0,
      ],
    },
    "type": "set modification",
  },
  Object {
    "payload": Object {
      "next": [Function],
      "options": Object {
        "body": Object {
          "bidirectional": false,
          "entries": Array [],
          "feed": "1",
          "id": "1234",
          "name": "Test Modification",
          "routes": Array [
            "route1",
          ],
          "segments": Array [],
          "showOnMap": false,
          "timetables": Array [
            Object {
              "dwellTime": 10,
              "endTime": 57600,
              "friday": true,
              "headwaySecs": 900,
              "monday": true,
              "name": "Test timetable",
              "patternTrips": Array [
                "abcd",
              ],
              "saturday": false,
              "segmentSpeeds": Array [],
              "sourceTrip": "abcd",
              "startTime": 28800,
              "sunday": false,
              "thursday": true,
              "tuesday": true,
              "wednesday": true,
            },
          ],
          "trips": Array [
            "abcd",
          ],
          "type": "add-trip-pattern",
          "variants": Array [
            0,
          ],
        },
        "method": "put",
      },
      "url": "/api/modification/1234",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > modifications > set should work 2`] = `
Array [
  Object {
    "payload": Object {
      "bidirectional": false,
      "entries": Array [],
      "feed": "1",
      "id": "1234",
      "name": "Test Modification",
      "routes": Array [
        "route1",
      ],
      "segments": Array [],
      "showOnMap": false,
      "timetables": Array [
        Object {
          "dwellTime": 10,
          "endTime": 57600,
          "friday": true,
          "headwaySecs": 900,
          "monday": true,
          "name": "Test timetable",
          "patternTrips": Array [
            "abcd",
          ],
          "saturday": false,
          "segmentSpeeds": Array [],
          "sourceTrip": "abcd",
          "startTime": 28800,
          "sunday": false,
          "thursday": true,
          "tuesday": true,
          "wednesday": true,
        },
      ],
      "trips": Array [
        "abcd",
      ],
      "type": "add-trip-pattern",
      "variants": Array [
        0,
      ],
    },
    "type": "set modification",
  },
  Array [
    Object {
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
]
`;

exports[`actions > modifications > set should work 3`] = `
Array [
  Object {
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > modifications > setActive should work 1`] = `
Object {
  "type": "set active modification",
}
`;

exports[`actions > modifications > setAndRetrieveData should work 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "bidirectional": false,
        "entries": Array [],
        "feed": "1",
        "id": "1234",
        "name": "Test Modification",
        "routes": Array [
          "route1",
        ],
        "segments": Array [],
        "showOnMap": false,
        "timetables": Array [
          Object {
            "dwellTime": 10,
            "endTime": 57600,
            "friday": true,
            "headwaySecs": 900,
            "monday": true,
            "name": "Test timetable",
            "patternTrips": Array [
              "abcd",
            ],
            "saturday": false,
            "segmentSpeeds": Array [],
            "sourceTrip": "abcd",
            "startTime": 28800,
            "sunday": false,
            "thursday": true,
            "tuesday": true,
            "wednesday": true,
          },
        ],
        "trips": Array [
          "abcd",
        ],
        "type": "add-trip-pattern",
        "variants": Array [
          0,
        ],
      },
      "type": "set modification",
    },
    Object {
      "payload": Object {
        "next": [Function],
        "options": Object {
          "body": Object {
            "bidirectional": false,
            "entries": Array [],
            "feed": "1",
            "id": "1234",
            "name": "Test Modification",
            "routes": Array [
              "route1",
            ],
            "segments": Array [],
            "showOnMap": false,
            "timetables": Array [
              Object {
                "dwellTime": 10,
                "endTime": 57600,
                "friday": true,
                "headwaySecs": 900,
                "monday": true,
                "name": "Test timetable",
                "patternTrips": Array [
                  "abcd",
                ],
                "saturday": false,
                "segmentSpeeds": Array [],
                "sourceTrip": "abcd",
                "startTime": 28800,
                "sunday": false,
                "thursday": true,
                "tuesday": true,
                "wednesday": true,
              },
            ],
            "trips": Array [
              "abcd",
            ],
            "type": "add-trip-pattern",
            "variants": Array [
              0,
            ],
          },
          "method": "put",
        },
        "url": "/api/modification/1234",
      },
      "type": "fetch",
    },
  ],
  Object {
    "payload": Object {
      "next": [Function],
      "url": "/api/graphql?query=%0Aquery%20dataQuery(%24bundleId%3A%20String%2C%20%24routeIds%3A%20%5BString%5D)%20%7B%0A%20%20bundle%20(bundle_id%3A%20%5B%24bundleId%5D)%20%7B%0A%20%20%20%20feeds%20%7B%0A%20%20%20%20%20%20feed_id%2C%0A%20%20%20%20%20%20checksum%2C%0A%20%20%20%20%20%20routes%20%7B%0A%20%20%20%20%20%20%20%20route_id%0A%20%20%20%20%20%20%20%20route_short_name%0A%20%20%20%20%20%20%20%20route_long_name%0A%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20detailRoutes%3A%20routes(route_id%3A%20%24routeIds)%20%7B%0A%20%20%20%20%20%20%20%20route_id%0A%20%20%20%20%20%20%20%20route_short_name%0A%20%20%20%20%20%20%20%20route_long_name%0A%20%20%20%20%20%20%20%20patterns%20%7B%0A%20%20%20%20%20%20%20%20%20%20name%2C%0A%20%20%20%20%20%20%20%20%20%20pattern_id%2C%0A%20%20%20%20%20%20%20%20%20%20geometry%2C%0A%20%20%20%20%20%20%20%20%20%20trips%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20trip_id%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20trip_short_name%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20trip_headsign%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20start_time%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20direction_id%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20duration%0A%20%20%20%20%20%20%20%20%20%20%7D%2C%0A%20%20%20%20%20%20%20%20%20%20stops%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20stop_id%0A%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20stops%20%7B%0A%20%20%20%20%20%20%20%20stop_id%2C%0A%20%20%20%20%20%20%20%20stop_name%2C%0A%20%20%20%20%20%20%20%20stop_lat%2C%0A%20%20%20%20%20%20%20%20stop_lon%0A%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%0A%20%20%7D%0A%7D%0A&variables=%7B%22bundleId%22%3A1%2C%22routeIds%22%3A%5B%5D%7D",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > modifications > setLocally should work 1`] = `
Object {
  "type": "set modification",
}
`;
